DHParser Version 0.9.1
......................

- added support for tag-less parsers: i.e. parser that are assigned to a
  symbol with leading underscore will be treated as anonymous parsers
- extended support for dropping of content during parsing-stage, now any
  tag-less parser's content can be dropped, not only that of the Token
  and Whitespace-parsers
- resuming after an error does not jump in to commentaries, any more (bugfix!)
- some speed optimizations


DHParser Version 0.9.0 (20.10.2019)
...................................

- rudimentary language server support (still experimental!)
- translation pipeline only stops on fatal errors. This makes previews
  even for partially erroneous code possible
- better cython support
- scripts (dhparser.py, dhparser_rename.py) moved to
  DHParser/scripts-directory
- syntaxtree.py streamlined
  (breaking change: Node.select_by_tag() remove, use Node.select() instead
- added DHParser/templates subdirectory and moved larger code templates
  from dhparser.py script to the templates-subdirectory


DHParser Version 0.8.9 (5.4.2019)
.................................

- experimental server module
- json-serialization of Nodes


DHParser Version 0.8.8 (4.3.2019)
.................................

- setup: entry-script repaired


DHParser Version 0.8.7 (3.3.2019)
.................................

- better packaging


DHParser Version 0.8.6 (3.3.2019)
.................................

- default configuration now centralized in DHParser/configuration.py
- dropped python 3.4 support
- infinite loops in ZeroOrMore, OneOrMore and the like will now simply
  be broken rather than reported as an error
- better parser-optimization, i.e. flattening and dropping of irrelevant
  nodes while parsing already.
- no caching of node.content any more, because this was conceptually
  unsound. Trees are refactored and nodes dropped all the time which
  would require invalidating the cache, which would be hard to implement.