@@ -1,6 +1,9 @@
 DHParser Version 0.9.1
 ......................
 
+- for debugging, notices informing about where the parser resumes after
+  an error can be added to the error messages. (See config-parameter
+  "resume_notices".)
 - added support for tag-less parsers: i.e. parser that are assigned to a
   symbol with leading underscore will be treated as anonymous parsers
 - extended support for dropping of content during parsing-stage, now any
